kubernetes/base/traefik/deployment.yaml
# traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      automountServiceAccountToken: true
      securityContext:
        runAsUser: 0
      containers:
        - name: traefik
          image: traefik:v3.1.4
          args:
            - "--log.level=INFO"
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            - "--entrypoints.traefik.address=:8080"
            - "--api.dashboard=true"
            - "--api.insecure=true"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: traefik
              containerPort: 8080
